--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -42,6 +42,14 @@
   </div>
 
   <dl>
+    <dt>V16.05 <span class="ver_date">(2023-12-07)</span></dt>
+    <dd>
+      ・Dropbox で同期されているディレクトリ(代替データストリームに com.dropbox.attrs がある)を削除したり、コピーの際にタイムスタンプを設定したりする場合、直前に待ち時間を入れることにより処理の失敗を防ぐようにしました(だめだったらリトライ)。<br>
+      ・VSLスタイル(Windows 以外)を適用している場合、メインメニューの無効/有効化に時間がかかったり、画面モード切替時にメインメニューがちらついたりするのを改善。<br>
+      ・VSLスタイルがポップアップメニューのスクロール表示に対応していないため、メニュー項目が多い場合は列分割するようにしました(例: SubDirList_ND)。<br>
+      ・VSLスタイルを適用している場合、従来版では表示されていなかったリストのフォーカス枠が描画されてしまうのを修正。また、ZoomReset 実行後にファイルリストが適切に再描画されなかったのを修正。<br>
+    </dd>
+
     <dt>V16.04 <span class="ver_date">(2023-12-01)</span></dt>
     <dd>
       ・正規表現チェッカーの右側にある正規表現の参照とサンプルパターンを上下に分割し、下部の内容を右クリックメニューでファイルから読み込めるようにしました。なお、サンプルファイルを編集してタイムスタンプが変化した場合、チェッカーがアクティブになったとき自動的に再読み込みされます。<br>
