--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -42,6 +42,11 @@
   </div>
 
   <dl>
+    <dt>V16.06 <span class="ver_date">(2023-12-09)</span></dt>
+    <dd>
+      ・イメージビュアーを全画面表示にすると、Next/PrevFile が機能しなくなったり、サムネイルを表示できなくなったりする不具合を修正。
+    </dd>
+
     <dt>V16.05 <span class="ver_date">(2023-12-07)</span></dt>
     <dd>
       ・Dropbox で同期されているディレクトリ(代替データストリームに com.dropbox.attrs がある)を削除したり、コピーの際にタイムスタンプを設定したりする場合、直前に待ち時間を入れることにより処理の失敗を防ぐようにしました(だめだったらリトライ)。<br>
