--- a/help/src/hid00011.htm
+++ b/help/src/hid00011.htm
@@ -6,28 +6,29 @@
   <title>オプション設定 - テキストビュアー</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="CSV">
-    <param name="Keyword" value="FunctionList">
-    <param name="Keyword" value="HTML→テキスト変換">
-    <param name="Keyword" value="HtmlToText">
-    <param name="Keyword" value="ListText">
-    <param name="Keyword" value="Markdown記法">
-    <param name="Keyword" value="SetColor">
-    <param name="Keyword" value="SetMargin">
-    <param name="Keyword" value="SetTab">
-    <param name="Keyword" value="SetTopAddr">
-    <param name="Keyword" value="SetWidth">
-    <param name="Keyword" value="ShowLineNo">
-    <param name="Keyword" value="ShowRuler">
-    <param name="Keyword" value="TSV">
-    <param name="Keyword" value="テキストビュアー">
-    <param name="Keyword" value="バイナリ・ダンプ表示">
-    <param name="Keyword" value="メモリマップドファイル">
-    <param name="Keyword" value="リッチテキスト">
-    <param name="Keyword" value="ルーラ">
-    <param name="Keyword" value="外部ビュアー">
-    <param name="Keyword" value="強調表示">
-    <param name="Keyword" value="青空文庫">
+	<param name="Keyword" value="CSV">
+	<param name="Keyword" value="FunctionList">
+	<param name="Keyword" value="HTML→テキスト変換">
+	<param name="Keyword" value="HtmlToText">
+	<param name="Keyword" value="ListText">
+	<param name="Keyword" value="Markdown記法">
+	<param name="Keyword" value="SetColor">
+	<param name="Keyword" value="SetMargin">
+	<param name="Keyword" value="SetTab">
+	<param name="Keyword" value="SetTopAddr">
+	<param name="Keyword" value="SetWidth">
+	<param name="Keyword" value="ShowLineNo">
+	<param name="Keyword" value="ShowRuler">
+	<param name="Keyword" value="TSV">
+	<param name="Keyword" value="スティッキー表示">
+	<param name="Keyword" value="テキストビュアー">
+	<param name="Keyword" value="バイナリ・ダンプ表示">
+	<param name="Keyword" value="メモリマップドファイル">
+	<param name="Keyword" value="リッチテキスト">
+	<param name="Keyword" value="ルーラ">
+	<param name="Keyword" value="外部ビュアー">
+	<param name="Keyword" value="強調表示">
+	<param name="Keyword" value="青空文庫">
   </object>
 </head>
 
@@ -78,6 +79,12 @@
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> スクロールバーを折り返し位置に表示</dt>
     <dd>折り返しがウィンドウ幅でない場合、スクロールバーを折り返し位置の横(右側余白の左横)に表示します。</dd>
+
+    <dt class="no_bg"><img src="chkbox.png" alt=""> 関数/見出し等をスティッキー表示</dt>
+    <dd>
+      ビュアーの最上行位置に、関数の先頭行や見出し(<a href="hid00006.htm#FunctionList">FunctionList</a> コマンドで表示される項目)をスティッキー表示します。表示部は、ビュアー背景色の明度を加減した色になります。<br>
+      スティッキーをクリックすると、その行にカーソルが移動します。<br>
+    </dd>
 
     <dt class="no_bg">行間 <img src="edit.png" alt="">　<span class="def_text">(デフォルト: 4px)</span></dt>
     <dd>テキストの行間をピクセル単位で指定します。</dd>
