--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -42,6 +42,15 @@
   </div>
 
   <dl>
+    <dt>V16.07 <span class="ver_date">(2023-12-13)</span></dt>
+    <dd>
+      ・オプション設定 - テキストビュアー に「関数/見出し等をスティッキー表示」を追加。ビュアーの最上行位置に、関数の先頭行や見出し(FunctionList コマンドで表示される項目)をスティッキー表示します。表示部は、ビュアー背景色の明度を加減した色になります。スティッキーをクリックすると、その行にカーソルが移動します。<br>
+      ・名前の変更ダイアログの「連番」タブで使用できる書式文字列に \DT() を追加。書式にしたがった現在日時に変換されます。これにともない、対応する[現在]ボタンを追加。また紛らわしいので、従来の[日時]ボタン(タイムスタンプ)を[タイム]に変更。<br>
+      ・名前の変更ダイアログの「名前」タブで入力欄にフォーカスがある場合に[F2]キーを押すと、ファイル名主部の末尾/先頭 /主部を選択/全体を選択 の順番に状態が切り替わるようにしました。<br>
+      ・メインメニュー非表示で画面モードを切り替えたとき、表示に切り替わってしまうのを修正(V16.05)。<br>
+      ・イメージビュアーでファイルを削除する際、先頭画像が一瞬表示されてしまうのを修正。<br>
+    </dd>
+
     <dt>V16.06 <span class="ver_date">(2023-12-09)</span></dt>
     <dd>
       ・イメージビュアーを全画面表示にすると、Next/PrevFile が機能しなくなったり、サムネイルを表示できなくなったりする不具合を修正。
