--- a/help/src/hid00005.htm
+++ b/help/src/hid00005.htm
@@ -2316,9 +2316,9 @@ NyanFi.exe -Ld:\hoge -CL -XGrep_"にゃぁ":GrepSetMask_*.txt:GrepStart
     </dd>
 
     <dt id="MoveTo">MoveTo<span class="pram_text">_ディレクトリ名</span></dt>
-    <dd>選択中(無ければカーソル位置)の項目を指定ディレクトリへ移動します。<br>
+    <dd>選択中(無ければカーソル位置)の項目を指定ディレクトリに移動します。<br>
       ディレクトリ名には、"%変数名%" という書式で環境変数も使えます。ドライブ名がない場合はカレントからの相対指定になります。<br>
-      <b>例</b>: 親ディレクトリに移動<br>
+      <b>例</b>: 対象項目を親ディレクトリに移動<br>
       　MoveTo_..<br>
       <a href="#Move">→ Move</a>　<a href="#Copy">→ Copy</a>　<a href="#CopyTo">→ CopyTo</a>
     </dd>
