--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -15,15 +15,16 @@
   <h1>変更履歴</h1>
   <div class="inf_box" id="MessageBoard">
     <b>仮設伝言板</b>　<span class="small">お知らせや、名無しさんたちとの間接的なやりとりのためのスペースです(<small>5ちゃんねるに直接書き込むことはありません</small>)。<br></span>
-<!--
-<ul>
-<li></li>
-</ul>
--->
 
+    <ul>
+      <li>MoveTo コマンドによる移動ができないとのことですが、こちらでは再現できません。移動する対象(選択/カーソル位置項目、ファイル/ディレクトリ)、移動先ディレクトリの指定内容(相対/絶対、同/別ドライブ)、コマンドの実行方法(キー、ツールボタン、メニューファイル…)などを具体的に教えてください。</li>
+    </ul>
+
+<!--
     <ul>
       <li>『仮設伝言板』というのはどこにあるのかと問われる方がいらっしゃるので、何もないときでも表示しておきます。</li>
     </ul>
+-->
   </div>
   <br>
 
@@ -42,10 +43,19 @@
   </div>
 
   <dl>
+    <dt>V16.08 <span class="ver_date">(2023-12-19)</span></dt>
+    <dd>
+      ・オプション設定 - 一般 - 操作 の「アクセラレータキー自動調整」をチェックしていないと、PopupMainMenu
+      コマンドで個別にメニューを開いたときに通常のアクセラレータキーが表示されない場合があるので、このオプションは廃止し、常に自動調整するようにしました。<br>
+      ・テキストビュアーの JumpLine コマンドのパラメータに ST を追加。スティッキーが表示されている場合、その行に移動します。<br>
+    </dd>
+
     <dt>V16.07 <span class="ver_date">(2023-12-13)</span></dt>
     <dd>
-      ・オプション設定 - テキストビュアー に「関数/見出し等をスティッキー表示」を追加。ビュアーの最上行位置に、関数の先頭行や見出し(FunctionList コマンドで表示される項目)をスティッキー表示します。表示部は、ビュアー背景色の明度を加減した色になります。スティッキーをクリックすると、その行にカーソルが移動します。<br>
-      ・名前の変更ダイアログの「連番」タブで使用できる書式文字列に \DT() を追加。書式にしたがった現在日時に変換されます。これにともない、対応する[現在]ボタンを追加。また紛らわしいので、従来の[日時]ボタン(タイムスタンプ)を[タイム]に変更。<br>
+      ・オプション設定 - テキストビュアー に「関数/見出し等をスティッキー表示」を追加。ビュアーの最上行位置に、関数の先頭行や見出し(FunctionList
+      コマンドで表示される項目)をスティッキー表示します。表示部は、ビュアー背景色の明度を加減した色になります。スティッキーをクリックすると、その行にカーソルが移動します。<br>
+      ・名前の変更ダイアログの「連番」タブで使用できる書式文字列に \DT()
+      を追加。書式にしたがった現在日時に変換されます。これにともない、対応する[現在]ボタンを追加。また紛らわしいので、従来の[日時]ボタン(タイムスタンプ)を[タイム]に変更。<br>
       ・名前の変更ダイアログの「名前」タブで入力欄にフォーカスがある場合に[F2]キーを押すと、ファイル名主部の末尾/先頭 /主部を選択/全体を選択 の順番に状態が切り替わるようにしました。<br>
       ・メインメニュー非表示で画面モードを切り替えたとき、表示に切り替わってしまうのを修正(V16.05)。<br>
       ・イメージビュアーでファイルを削除する際、先頭画像が一瞬表示されてしまうのを修正。<br>
@@ -58,7 +68,8 @@
 
     <dt>V16.05 <span class="ver_date">(2023-12-07)</span></dt>
     <dd>
-      ・Dropbox で同期されているディレクトリ(代替データストリームに com.dropbox.attrs がある)を削除したり、コピーの際にタイムスタンプを設定したりする場合、直前に待ち時間を入れることにより処理の失敗を防ぐようにしました(だめだったらリトライ)。<br>
+      ・Dropbox で同期されているディレクトリ(代替データストリームに com.dropbox.attrs
+      がある)を削除したり、コピーの際にタイムスタンプを設定したりする場合、直前に待ち時間を入れることにより処理の失敗を防ぐようにしました(だめだったらリトライ)。<br>
       ・VSLスタイル(Windows 以外)を適用している場合、メインメニューの無効/有効化に時間がかかったり、画面モード切替時にメインメニューがちらついたりするのを改善。<br>
       ・VSLスタイルがポップアップメニューのスクロール表示に対応していないため、メニュー項目が多い場合は列分割するようにしました(例: SubDirList_ND)。<br>
       ・VSLスタイルを適用している場合、従来版では表示されていなかったリストのフォーカス枠が描画されてしまうのを修正。また、ZoomReset 実行後にファイルリストが適切に再描画されなかったのを修正。<br>
@@ -80,7 +91,8 @@
 
     <dt>V16.02 <span class="ver_date">(2023-11-25)</span></dt>
     <dd>
-      ・オプション設定 - フォント・配色 に「非アクティブなメイン画面の一部をグレー化」を追加。メイン画面が非アクティブになったときに、タブ、ディレクトリ情報、およびディレクトリ関係の部分をグレースケール化(明暗も加減)します。非アクティブ時のタイトルバーの変化が分かりにくいスタイルで役立つかもしれません。<br>
+      ・オプション設定 - フォント・配色
+      に「非アクティブなメイン画面の一部をグレー化」を追加。メイン画面が非アクティブになったときに、タブ、ディレクトリ情報、およびディレクトリ関係の部分をグレースケール化(明暗も加減)します。非アクティブ時のタイトルバーの変化が分かりにくいスタイルで役立つかもしれません。<br>
       ・.nyanfi ファイルによる「ディレクトリ情報の文字色」の設定が適用されなくなっていたのを修正。<br>
       ・オプション設定 - デザイン でスクロールバーを「標準」にしている場合、XMLビュアー、JSONビュアー、アプリケーション一覧、CSV/TSVレコードのスクロールバーにスタイルが適用されなかったのを修正。<br>
     </dd>
@@ -99,11 +111,13 @@
     <dt>V16.00 <span class="ver_date">(2023-11-22)</span></dt>
     <dd>
       ・64ビット版 NyanFi V15.63 をベースにVCLスタイル版を作成しました。なお、32ビット版を作成する予定はありません。<br>
-      ・従来の不完全な疑似ダークモードをやめ、VCLスタイルを利用しています。オプション設定 - フォント・配色 - 「スタイル」で、ライト/ダーク系合わせて14種類のスタイルを選択できます。なお、「ダイアログ」フォントはデフォルトで固定として、またスタイルに関連する一部の配色項目を削除/変更しました。<br>
+      ・従来の不完全な疑似ダークモードをやめ、VCLスタイルを利用しています。オプション設定 - フォント・配色 -
+      「スタイル」で、ライト/ダーク系合わせて14種類のスタイルを選択できます。なお、「ダイアログ」フォントはデフォルトで固定として、またスタイルに関連する一部の配色項目を削除/変更しました。<br>
       ・オプション設定 - フォント・配色の「不正な入力項目の背景色」を廃止し、代わりに「エラー/注意の文字色」の枠で入力欄を囲むようにしました。<br>
       ・オプション設定 - デザイン -「情報パネルをフラットに」を廃止。フラット表示固定にしました。<br>
       ・Ricty Diminished フォントはサポート終了となっているようなので対応を止めました。<br>
-      ・VCLスタイルを適用すると従来のヘルプ表示が乱れるため、hh.exe を別プロセスで実行するようにしました。ヘルプが開いている状態で何らかのダイアログをモーダル表示しても、ヘルプは閉じません。これにともない、オプション設定 - 一般 - 操作 - 「ESCキーでヘルプを閉じる」は廃止、F1 キーによる元画面とヘルプ画面間の移動もできなくなりました。<br>
+      ・VCLスタイルを適用すると従来のヘルプ表示が乱れるため、hh.exe を別プロセスで実行するようにしました。ヘルプが開いている状態で何らかのダイアログをモーダル表示しても、ヘルプは閉じません。これにともない、オプション設定 -
+      一般 - 操作 - 「ESCキーでヘルプを閉じる」は廃止、F1 キーによる元画面とヘルプ画面間の移動もできなくなりました。<br>
       ・テキストビュアーの HelpCurWord コマンドは hhh.exe (saitou155 氏作)を利用するようにしました。実行するには、あらかじめパスの通ったディレクトリにインストールしておいてください。<br>
       ・オプション設定 - デザイン - ステータスバーの書式 の「時計パネル」で使える書式文字列に $WS、$FP を追加。メモリ使用量(Working Set/ Pagefile)をKB単位で表示します。<br>
     </dd>
