--- a/help/src/hid00021.htm
+++ b/help/src/hid00021.htm
@@ -32,7 +32,11 @@
       CopyCmdName</a>)。<br>
     先頭 <b>$</b> の場合、<a href="hid00014.htm">追加メニュー</a>または<a
       href="hid00015.htm">外部ツール</a>で設定されている<b>エイリアス</b>とみなし、その項目を実行します(サブメニューの親項目の場合は、そのサブメニューをポップアップ表示)。<br>
-    なお、先頭に <b>;</b> (セミコロン)を挿入すると、そのコマンド設定を無効にできます。
+    なお、先頭に <b>;</b> (セミコロン)を挿入すると、そのコマンド設定を無効にできます。<br>
+  </p>
+
+  <p>
+    <span class="btn_frame">F2</span>キーを押すと、入力内容全体を選択/パラメータ(引用符があればその内部)を選択/末尾に移動 の順番で状態が切り替わります。
   </p>
 
   <p>
