--- a/help/src/hid00068.htm
+++ b/help/src/hid00068.htm
@@ -53,6 +53,11 @@
     先頭が <b>@</b> の場合は<b>コマンドファイル</b>とみなされます。<br>
     詳細は「<a href="hid00063.htm">ExeCommands コマンド</a>」のページを参照してください。<br>
   </p>
+
+  <p>
+    <span class="btn_frame">F2</span>キーを押すと、入力内容全体を選択/パラメータ(引用符があればその内部)を選択/末尾に移動 の順番で状態が切り替わります。
+  </p>
+
   <p>
     コマンド欄のドロップダウンでは、ファイルを対象とする主なコマンドやエイリアスを参照できます。また、右クリックメニューで「<b>コマンド名の参照</b>」が可能です(<a
       href="hid00005.htm#CopyCmdName">→ CopyCmdName</a>)。<br>
