--- a/help/src/hid00104.htm
+++ b/help/src/hid00104.htm
@@ -51,7 +51,7 @@
       というキー設定を、<span class="btn_frame">←</span>=<b>ToLeft_RP</b>、<span class="btn_frame">→</span>=<b>ToRight_RP</b> に変更してください。<br>
       <span class="btn_frame">←</span>=<a href="hid00005.htm#ToParentOnLeft">ToParentOnLeft</a>、<span
         class="btn_frame">→</span>=<a href="hid00005.htm#ToParentOnRight">ToParentOnRight</a> に設定しても同じです。<br>
-      またパラメータの追加指定によって、カレントがルートだった場合にドライブ一覧などを表示されること可能です。詳しくは <a href="hid00005.htm#ToLeft">ToLeft</a> / <a href="hid00005.htm#ToRight">ToRight</a> を参照してください。
+      またパラメータの追加指定によって、カレントがルートだった場合にドライブ一覧などを表示されることも可能です。詳しくは <a href="hid00005.htm#ToLeft">ToLeft</a> / <a href="hid00005.htm#ToRight">ToRight</a> を参照してください。
     </dd>
 
     <dt>Q. マクロのような機能はありますか？</dt>
@@ -95,8 +95,9 @@
     <dt>Q. 7-zip64.dll 文字化け対策版の7z.dll対応版(x@rgs 氏作)が機能しません。</dt>
     <dd>正しくインストールされていない可能性があります。まず <b>7-Zip</b> をインストールしておいてください。また7z.dll対応版のインストールには、インストーラー版を利用することをお勧めします。その際、「インストール
       コンポーネントを選択」で
-      「7-zip32.dll/7-zip64.dll」のチェックを外してから「7z.dll対応版7-zip32.dll/7-zip64.dll」の方をチェックしてください。正しくインストールされていれば、起動時のログに <span
-        class="example_box">LOAD 7-zip64.dll v19.00 using 7z.dll</span> などと表示されます。<br>
+      「7-zip32.dll/7-zip64.dll」のチェックを外してから「7z.dll対応版7-zip32.dll/7-zip64.dll」の方をチェックしてください。<br>
+      正しくインストールされていれば、起動時のログに <span
+        class="example_box">LOAD 7-zip64.dll v23.01 using 7z.dll</span> などと表示されます。<br>
     </dd>
 
     <dt>Q. エディタでUTF-8として保存したテキストファイルがUS-ASCIIと認識されます。</dt>
