--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -18,6 +18,9 @@
 
     <ul>
       <li>MoveTo コマンドによる移動ができないとのことですが、こちらでは再現できません。移動する対象(選択/カーソル位置項目、ファイル/ディレクトリ)、移動先ディレクトリの指定内容(相対/絶対、同/別ドライブ)、コマンドの実行方法(キー、ツールボタン、メニューファイル…)などを具体的に教えてください。</li>
+      <li>
+        Susie プラグインの対応は、WICやアーカイバとの関係で処理がややこしくなるので勘弁してください。<br>
+      </li>
     </ul>
 
 <!--
@@ -43,6 +46,18 @@
   </div>
 
   <dl>
+    <dt>V16.09 <span class="ver_date">(2023-12-22)</span></dt>
+    <dd>
+      ・ファイラーの DateSelect コマンドのパラメータに TD (今日付のファイルを選択)、CP (カーソル位置と同じ日付のファイルを選択)を追加。<br>
+      ・オプション設定 - 一般 - 監視/更新 の「アクティブ時に最新の情報に」が有効で、非アクティブな NyanFi のツールボタンやファンクションキーバーのボタンを押したとき、ファイルリストの更新処理中でボタンのコマンドが実行できなかった場合、更新後にそれを実行するようにしました。<br>
+      ・コマンドの入力欄(InputCommands コマンド、ツールバーの設定、オプション設定 - イベント)で[F2]キーを押すと、全体を選択/パラメータ(引用符があればその内部)を選択/末尾に移動 の順番に状態が切り替わるようにしました。<br>
+      ・desktop.ini でフォルダアイコンが設定されている場合、それを表示するようにしました。SetFolderIcon コマンドで独自設定されている場合は、そちらが優先されます。<br>
+      ・正規表現チェッカーで「詳細」が有効な場合、マッチ/グループ/置換文字列にタブ文字が含まれていると結果が適切に表示されなかったのを修正。結果の引用符内にあるタブ文字は、ビュアーの「タブ表示色」で "\t" と表示するようにしました。<br>
+      ・VSLスタイル(Windows 以外)を適用している場合、サブビュアーをロックしたときの赤枠が表示されないのを修正。ツールウインドウの境界線を赤で表示するようにしました。<br>
+      ・メタファイル(.wmf、.emf)のサムネイルを作成できなくなっていたのを修正。また、画像ファイルの変換(ConvertImage)で、「縮小・拡大を行わない」に設定すると、メタファイルの変換に失敗するのを修正。<br>
+      ・特殊フォルダ一覧で TEMP と TMP が同じ表示になっていたのを修正。<br>
+    </dd>
+
     <dt>V16.08 <span class="ver_date">(2023-12-19)</span></dt>
     <dd>
       ・オプション設定 - 一般 - 操作 の「アクセラレータキー自動調整」をチェックしていないと、PopupMainMenu
@@ -56,7 +71,7 @@
       コマンドで表示される項目)をスティッキー表示します。表示部は、ビュアー背景色の明度を加減した色になります。スティッキーをクリックすると、その行にカーソルが移動します。<br>
       ・名前の変更ダイアログの「連番」タブで使用できる書式文字列に \DT()
       を追加。書式にしたがった現在日時に変換されます。これにともない、対応する[現在]ボタンを追加。また紛らわしいので、従来の[日時]ボタン(タイムスタンプ)を[タイム]に変更。<br>
-      ・名前の変更ダイアログの「名前」タブで入力欄にフォーカスがある場合に[F2]キーを押すと、ファイル名主部の末尾/先頭 /主部を選択/全体を選択 の順番に状態が切り替わるようにしました。<br>
+      ・名前の変更ダイアログの「名前」タブで入力欄にフォーカスがある場合に[F2]キーを押すと、ファイル名主部の末尾/先頭/主部を選択/全体を選択 の順番に状態が切り替わるようにしました。<br>
       ・メインメニュー非表示で画面モードを切り替えたとき、表示に切り替わってしまうのを修正(V16.05)。<br>
       ・イメージビュアーでファイルを削除する際、先頭画像が一瞬表示されてしまうのを修正。<br>
     </dd>
