--- a/help/src/hid00011.htm
+++ b/help/src/hid00011.htm
@@ -83,7 +83,7 @@
     <dt class="no_bg"><img src="chkbox.png" alt=""> 関数/見出し等をスティッキー表示</dt>
     <dd>
       ビュアーの最上行位置に、関数の先頭行や見出し(<a href="hid00006.htm#FunctionList">FunctionList</a> コマンドで表示される項目)をスティッキー表示します。表示部は、ビュアー背景色の明度を加減した色になります。<br>
-      スティッキーをクリックすると、その行にカーソルが移動します。<br>
+      スティッキーをクリックすると、その行にカーソルが移動します(<a href="hid00006.htm#JumpLine">JumpLine_ST</a> コマンドでも可能)。<br>
     </dd>
 
     <dt class="no_bg">行間 <img src="edit.png" alt="">　<span class="def_text">(デフォルト: 4px)</span></dt>
